Playing with Swaggerui Scehema
