# cointrum-mainapi/src/config/swagger.json
@@ -1,10 +1,26 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "title": "Cointrum's RESTful API",
+    "description": "",
+    "termsOfService": "http://cointrum.app/terms/",
+    "contact": {
+      "email": "jordems@gmail.com"
+    },
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
   },
   "host": "localhost:3000",
   "basePath": "/api/v1",
+  "tags": [
+    {
+      "name": "Creation Hub",
+      "description": "Calls made on Creation Hub"
+    }
+  ],
   "schemes": ["http"],
   "produces": ["application/json"],
   "paths": {
@@ -53,7 +69,7 @@
       }
     },
     "/creationhub/createtradingmap": {
-      "get": {
+      "post": {
         "tags": ["Creation Hub"],
         "summary": "Creates a trading map for current user",
         "responses": {
@@ -64,6 +80,16 @@
             "description": "Bad request"
           }
         },
+        "requestBody": {
+          "description": "JSON object Containg Creation Map details",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/tradingmap"
+              }
+            }
+          }
+        },
         "content": {
           "application/json": {}
         },
@@ -71,7 +97,7 @@
       }
     },
     "/creationhub/edittradingmap": {
-      "get": {
+      "put": {
         "tags": ["Creation Hub"],
         "summary": "Edits a trading map of a user",
         "responses": {
@@ -89,7 +115,7 @@
       }
     },
     "/creationhub/removetradingmap": {
-      "get": {
+      "delete": {
         "tags": ["Creation Hub"],
         "summary": "Removes a trading map from a user, and deletes it",
         "responses": {
@@ -130,6 +156,226 @@
             "schema": { "type": "string" }
           }
         ]
+      }
+    },
+    "/learninghub/{tradingmapid}/createlabel": {
+      "post": {
+        "tags": ["Learning Hub"],
+        "summary": "Create a new label on trading map.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    },
+    "/learninghub/{tradingmapid}/editlabel": {
+      "put": {
+        "tags": ["Learning Hub"],
+        "summary": "Edit details of label linked to trading map.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    },
+    "/learninghub/{tradingmapid}/removelabels": {
+      "delete": {
+        "tags": ["Learning Hub"],
+        "summary": "Remove label from trading map",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    },
+    "/learninghub/{tradingmapid}/label/{labelid}/getseeds": {
+      "get": {
+        "tags": ["Learning Hub"],
+        "summary": "Get all seeds linked to label and trading map",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "labelid",
+            "in": "path",
+            "description": "id of label",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    },
+    "/learninghub/{tradingmapid}/label/{labelid}/createseed": {
+      "post": {
+        "tags": ["Learning Hub"],
+        "summary": "Add seed to label on trading map.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "labelid",
+            "in": "path",
+            "description": "id of label",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    },
+    "/learninghub/{tradingmapid}/label/{labelid}/editseed": {
+      "put": {
+        "tags": ["Learning Hub"],
+        "summary": "Edit seed on label from trading map.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "labelid",
+            "in": "path",
+            "description": "id of label",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    },
+    "/learninghub/{tradingmapid}/label/{labelid}/removeseed": {
+      "delete": {
+        "tags": ["Learning Hub"],
+        "summary": "Remove seed from label from trading map.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        },
+        "content": {
+          "application/json": {}
+        },
+        "parameters": [
+          {
+            "name": "tradingmapid",
+            "in": "path",
+            "description": "id of trading map",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "labelid",
+            "in": "path",
+            "description": "id of label",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      }
+    }
+  },
+  "definitions": {
+    "tradingmap": {
+      "type": "object",
+      "properties": {
+        "tradingmapid": {
+          "type": "string"
+        }
       }
     }
   }
